[package]
name = "wasmapp"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasi = "0.13.0"

[package.metadata.component]
package = "component:wasmapp"
# This tells cargo-component to use a special adapter, which doesn't depend on
# `get-environment` or other things not present in the proxy world.
proxy = true

[package.metadata.component.dependencies]

[package.metadata.component.target]

[package.metadata.component.target.dependencies]
